CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(io_uring_sample)

ENABLE_LANGUAGE(CXX)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(CMAKE_CXX_FLAGS "-Wall -D_GNU_SOURCE ${CMAKE_CXX_FLAGS}")

ADD_EXECUTABLE(echo_server server/echo_server.cpp)
TARGET_LINK_LIBRARIES(echo_server uring)
